Add instructions about how to enable JFR